Fix window keep increasing in size
Things are no longer cut off! Yay!

--- a/src/com/magis/app/css/style.css
+++ b/src/com/magis/app/css/style.css
@@ -189,6 +189,12 @@ The greeting ("Hello, Ian!") on the home page
     -fx-spacing: 50px;
 }
 
+.recent-box {
+    -fx-background-color: #ffffff;
+    -fx-effect: dropshadow(three-pass-box,rgba(0,0,0,0.1), 15, 0, 0, 8);
+    -fx-padding: 20px;
+    -fx-background-radius: 25px;
+}
 
 .chapter-box {
     -fx-background-color: #ffffff;
